# kigo3.3

./: LICENSE  MANIFEST.IN  pyproject.toml  readme.md  readme.txt
assets/: cache.py
dev/: __init__.py  hot_reload.py
docs/: api.md
examples/: HELLO_WASM.py  demo-effects.py  ecs_example.py  example window.py  example_effects.py  example_hello_world.py  example_networking.py  example_physics_basic.py  example_touch_ui.py  example_ui_effects.py  skins_demos.py  smoke_example.py  touch_example.py
kigo/: _api.py  _init_.py  accelerate.py  app.py  fx_gl2d.py  fx_quick.py  gpu.py  hud.py  hwaccel.py  media.py  physics.py  physics_policy.py  platform.py  runtime.py  shader_demo.py  shim.py  skins.py  style.py  tree.py  widgets.py
kigo/android/: __init__.py  info.py  lifecycle.py  ossupport.py
kigo/cli/: doctor.py  main.py
kigo/debug/: __init__.py  freeze.py
kigo/ecs/: __init__.py  component.py  entity.py  render.py  system.py  world.py
kigo/inspector/: __init__.py  inspector.py  overlay.py  panel.py
kigo/inspector/ECS/: ecs_inspector.py  panel.py  tree.py
kigo/inspector/web/: bridge.py  dom_inspector.py
kigo/logging/: __init__.py  jsonlog.py
kigo/net/: __init__.py  qnetwork.py
kigo/nui/: node.py
kigo/qt/: __init__.py  backend.py
kigo/studio/: __init__.py  core.py  overlay.py
kigo/wasm/: __init__.py  executor.py  module.py
kits/skin_template/: css.py  preview.py  tokens.py
render/: shader.py
shaders/: fire.frag  lighting.frag  shadow.frag  smoke.frag  ui.frag  water.frag
touchscreen/: __init__.py  touch.py
